...
    <string name="lugar">Lugar de celebración:</string>
    <string name="fechaevento">Fecha del evento:</string>
    <string name="categoria">Categoría:</string>
    <string name="descripcion">Descripción:</string>
    <string name="inicio">Inicio</string>
    <string name="equipos">Equipos</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="nameevent">Nombre del evento</string>
    <string name="crearevento">Crear evento</string>
    <string name="elegirfecha">ELIGE FECHA</string>
    <string name="eligehora">ELIGE HORA</string>
    <string name="deporte">Deporte</string>
...
